# libxml2Perf

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: run-tests-and-benches.yml
benchmarks/: BenchmarkValues.h  Benchmarks.cpp  CMakeLists.txt
lib/: CMakeLists.txt
lib/libxml2Perf/: DataGen.cpp  DataGen.h  NodeWriter.cpp  NodeWriter.h
tests/: CMakeLists.txt  Tests.cpp
